# rust-on-nails

.devcontainer/: devcontainer.json  docker-compose.yml
crates/web-assets/: Cargo.toml  build.rs
crates/web-pages/: Cargo.toml
crates/web-pages/src/: lib.rs  users.rs
crates/web-server/: Cargo.toml  hello.html
crates/web-server/src/: main.rs  new_user.rs  static_files.rs
