[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, features = [
  "json",
  "tokio",
  "http1",
] }
db = { version = "0.1.0", path = "../db" }
dioxus = "0.5"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "fs",
  "rt-multi-thread",
] }
web-pages = { version = "0.1.0", path = "../web-pages" }
